--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
-DATABASE_URL= FIXME: your db url
+DATABASE_URL= your db url
 PORT=5000
-JWT_SALT_ROUNDS= FIXME: jwt salt rounds
+JWT_SALT_ROUNDS= jwt salt rounds
 JWT_ACCESS_SECRET_KEY=
 JWT_ACCESS_EXP_TIME=
 JWT_REFRESH_SECRET_KEY=
